Basic fix for Chosen overflow hidden. See #9247
We simply make enough space below the chosen widget for the drop-down not to overflow

--- a/components/tools/OmeroWeb/omeroweb/webclient/static/webclient/css/layout.css
+++ b/components/tools/OmeroWeb/omeroweb/webclient/static/webclient/css/layout.css
@@ -1835,6 +1835,15 @@
 
 	#personal_details {
 		overflow:hidden;
+		height: 400px;
+	}
+
+    /* improve display of E.g. "group-name (rw----)" */
+	.chzn-results li {
+	    white-space:nowrap;
+	}
+	.chzn-results {
+	    max-height:160px !important;
 	}
 	
 	#personal_details select {
